  [27648] FAIL: misc/tst-select
  [27651] Performance regression after updating to 2.33
  [27706] select fails to update timeout on error
  [27744] Support different libpthread/ld.so load orders for gdb -p
  [27892] powerpc: scv ABI error handling fails to check IS_ERR_VALUE
  [27974] Overflow bug in some implementation of wcsnlen, wmemchr, and wcsncat
  [28607] Masked signals are delivered on thread exit
  [28524] Conversion from ISO-2022-JP-3 with iconv may emit spurious NULs
  [28532] powerpc64[le]: CFI for assembly templated syscalls is incorrect
  [28755] overflow bug in wcsncmp_avx2 and wcsncmp_evex
  [28768] CVE-2022-23218: Buffer overflow in sunrpc svcunix_create
  [28769] CVE-2021-3999: Off-by-one buffer overflow/underflow in getcwd()
  [28770] CVE-2021-3998: Unexpected return value from realpath() for too long results

Version 2.33

Major new features:

* The dynamic linker accepts the --list-tunables argument which prints
  all the supported tunables.  This option is disable if glibc is
  configured with tunables disabled (--enable-tunables=no).

* The dynamic linker accepts the --argv0 argument and provides opportunity
  to change argv[0] string.

* The dynamic linker loads optimized implementations of shared objects
  from subdirectories under the glibc-hwcaps directory on the library
  search path if the system's capabilities meet the requirements for
  that subdirectory.  Initially supported subdirectories include
  "power9" and "power10" for the powerpc64le-linux-gnu architecture,
  "z13", "z14", "z15" for s390x-linux-gnu, and "x86-64-v2", "x86-64-v3",
  "x86-64-v4" for x86_64-linux-gnu.  In the x86_64-linux-gnu case, the
  subdirectory names correspond to the vendor-independent x86-64
  microarchitecture levels defined in the x86-64 psABI supplement.

* The new --help option of the dynamic linker provides usage and
  information and library search path diagnostics.

* The mallinfo2 function is added to report statistics as per mallinfo,