@@ -1,2 +1,0 @@
-#define NEED_AF_IUCV 1
-#include "../opensock.c"
